tests/NormalTests/paczka1/small_fuzzy/11427383.err
Error in line 3: 6hUUAQgAWE S119 13,3
Error in line 14: ozRnFh A619 38,8
